# truxxon.github.io

./: .env  .gitignore  README.md  adare-style.css  index.html  pyproject.toml  requirements.txt
instance/: my_database.db  portfolio.db
uncertain/: auth.py  commission.html
website/: __init__.py  forms.py  models.py  views.py
website/static/: index.js  style.css
website/templates/: about.html  base.html  commission.html  home.html  login.html  login_failed.html  portfolio.html  portfolio_add copy.html  portfolio_add.html  request_success.html  shop.html  view_requests.html
