[tool.poetry]
name = "gaiya-comp-sci-ia"
version = "0.1.0"
description = ""
authors = ["Layla Truxon <truxonlm@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.38"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
wtforms = "^3.2.1"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
